mobile overflow fixes

--- a/src/css/legend.css
+++ b/src/css/legend.css
@@ -9,4 +9,5 @@
     width: 300px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25), 0px -1px 0px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    pointer-events: auto;
 }
